--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,139 +1,51 @@
-africastalking==1.2.3
-aioredis==1.3.1
-amqp==2.6.1
-asgiref==3.7.2
-async-timeout==4.0.2
-attrs==21.4.0
-autobahn==21.2.1
-Automat==20.2.0
-billiard==3.6.3.0
-boto3==1.14.49
-botocore==1.17.49
-cached-property==1.5.2
-celery==4.4.7
-certifi==2020.6.20
-cffi==1.14.2
-channels==2.4.0
-channels-redis==3.2.0
-chardet==3.0.4
-click==8.0.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-colorama==0.4.6
-constantly==15.1.0
-contextlib2==21.6.0
-coverage==5.2.1
-cryptography==3.0
-cssbeautifier==1.14.9
-cssutils==1.0.2
-curlify==2.2.1
-daphne==2.5.0
-defusedxml==0.7.0rc1
-diff-match-patch==20181111
-distlib==0.3.4
-dj-database-url==2.1.0
-Django==3.2.21
-django-cors-headers @ https://github.com/adamchainz/django-cors-headers/archive/3.4.0.tar.gz
-django-db-signals==0.1.1
-django-debug-panel==0.8.3
-django-debug-toolbar==2.2
-django-debug-toolbar-request-history==0.1.3
-django-filter==23.3
-django-import-export==3.2.0
-django-jazzmin==2.6.0
-django-ratelimit==3.0.1
-django-redis==4.12.1
-django-shortuuidfield==0.1.3
-djangorestframework==3.14.0
-djlint==1.19.16
-docopt==0.6.2
-docutils==0.15.2
-EditorConfig==0.12.3
-et-xmlfile==1.1.0
-facebook-business==8.0.1
-factory-boy==3.0.1
-Faker==4.1.2
-filelock==3.4.2
-future==0.18.2
-greenlet==2.0.2
+asgiref==3.5.0
+boto3==1.20.26
+botocore==1.23.54
+Django==3.2.7
+dj-database-url==0.5.0
+django-auto-logout==0.5.0
+django-ckeditor==6.0.0
+django-ckeditor-5==0.1.6
+django-cors-headers==3.8.0  # Added django-cors-headers for handling cross-origin requests
+django-crispy-forms==1.12.0
+django-dotenv==1.4.2
+django-environ==0.9.0
+django-filter==21.1
+django-formset-js-improved==0.5.0.2
+django-heroku==0.3.1
+django-jazzmin==2.4.8
+django-jquery-js==3.1.1
+django-js-asset==1.2.2
+django-mailgun-provider==0.2.3
+django-plaintext-password==0.1.0
+django-rest-auth==0.9.5
+django-rest-framework==0.1.0
+django-social-share==2.2.1
+django-static-fontawesome==5.14.0.0
+django-storages==1.12.3
+django-taggit==3.0.0
+django-templated-mail==1.1.1
+django-tinymce==3.4.0
+django-widget-tweaks==1.4.8
+djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
+djoser==2.0.5
 gunicorn==20.0.4
-hiredis==2.0.0
-html-tag-names==0.1.2
-html-void-elements==0.1.0
-httplib2==0.18.1
-hyperlink==21.0.0
-idna==2.10
-importlib-metadata==6.7.0
-incremental==21.3.0
-jmespath==0.10.0
-jsbeautifier==1.14.9
-kombu==4.6.10
-lxml==4.7.1
-Markdown==3.4.4
-MarkupPy==1.14
-mock==4.0.2
-msgpack==1.0.3
-newrelic==5.16.2.147
-numpy==1.21.6
-oauthlib==3.1.0
-odfpy==1.4.1
-openpyxl==3.1.2
-pandas==1.3.5
-pathspec==0.11.2
-paypalrestsdk==1.13.1
-pdftotext==2.1.5
-phonenumbers==8.12.13
-Pillow==7.2.0
-platformdirs==2.4.1
-prompt-toolkit==3.0.24
-psycopg2==2.9.7
-psycopg2-binary==2.8.5
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycountry==20.7.3
-pycparser==2.20
-PyJWT==1.7.1
-pyOpenSSL==19.1.0
-PySocks==1.7.1
-python-dateutil==2.8.1
-python-dotenv==0.21.1
-python-memcached==1.59
-python-openid==2.2.5
-python-social-auth==0.3.6
-python3-openid==3.2.0
-pytz==2020.1
-PyYAML==6.0.1
-quill-delta==1.0.3
-redis==3.5.3
-regex==2022.10.31
-requests==2.24.0
-requests-oauthlib==1.3.0
-s3transfer==0.3.3
-schema==0.7.5
-service-identity==21.1.0
-shortuuid==1.0.11
-six==1.15.0
-social-auth-core==3.3.3
-SQLAlchemy==2.0.19
-sqlparse==0.3.1
-tablib==3.4.0
-tblib==1.7.0
-text-unidecode==1.3
-tomli==2.0.1
-tqdm==4.66.1
-twilio==5.7.0
-Twisted==21.7.0
-txaio==21.2.1
-typing_extensions==4.7.1
-urllib3==1.25.10
-uWSGI==2.0.19.1
-uwsgi-tools==1.1.1
-uwsgitop==0.11
-vine==1.3.0
-virtualenv==20.13.0
-wcwidth==0.2.5
-xlrd==2.0.1
-xlwt==1.3.0
-zipp==3.1.0
-zope.interface==5.4.0
+lxml==4.6.2
+pandas==1.4.0
+Pillow==9.1.0
+psycopg2==2.8.6
+psycopg2-binary==2.9.1
+python-decouple==3.5
+requests==2.27.1
+requests-oauthlib==1.3.1
+rjsmin==1.1.0
+s3transfer==0.5.2
+sendgrid==6.9.7
+uritemplate==4.1.1
+urllib3==1.26.9
+validate-email==1.3
+whitenoise==5.2.0
+django-import-export
+shortuuid
+django-shortuuidfield
